--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,14 +1,46 @@
 .navbar{
+  position: fixed;
   background-color: yellow;
   border-radius: 15px;
   width: 1000px;
-  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin-left: 200px;
 }
 .navbar div{
   display: inline-block;
   padding: 15px;
   color: red;
   font-size: 24px;
+  /* align-items: center; */
+}
+.buttonCase{
+
+} 
+
+button{
+  padding: 10px 20px;
+  color: white;
+  background-color: red;
+  font-weight: bolder;
+  font-size: 25px;
+  border: none;
+  border-radius: 4px;
+}
+.sideNavBar{
+  background-color: gray;
+  width: 100px;
+  height: 500px;
+  
+}
+
+.sideNavBar img{
+  display: block;
+  margin-top: 80px;
+  margin-left: 20px;
   align-items: center;
 }
 
