--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,5 +1,4 @@
 .navbar{
-  position: fixed;
   background-color: yellow;
   border-radius: 15px;
   width: 1000px;
@@ -34,13 +33,15 @@ button{
   background-color: gray;
   width: 100px;
   height: 500px;
-  
 }
 
-.sideNavBar img{
-  display: block;
-  margin-top: 80px;
-  margin-left: 20px;
+.sideNavBar div{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+img{
+  object-fit: contain;
 }
 
