--- a/CSS/header.css
+++ b/CSS/header.css
@@ -36,10 +36,13 @@ button:hover{
   color: black;
 }
 .sideNavBar{
+  position: fixed;
+  margin-top: 50px;
   background-color: gray;
   width: 100px;
   height: 500px;
   border-radius: 25px;
+  display: inline-block;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -54,4 +57,12 @@ button:hover{
 
 img{
 cursor: pointer;
+}
+
+.mainDiv{
+  background-color: green;
+  height: 500px;
+  margin-top: 50px;
+  margin-left: 200px;
+  width: 1000px;
 }
