--- a/CSS/header.css
+++ b/CSS/header.css
@@ -36,8 +36,8 @@ button:hover{
   color: black;
 }
 .sideNavBar{
-  position: fixed;
-  margin-top: 50px;
+  /* position: fixed; */
+  margin-top: 30px;
   background-color: gray;
   width: 100px;
   height: 500px;
@@ -58,11 +58,15 @@ button:hover{
 img{
 cursor: pointer;
 }
-
+#mainSidebar{
+  display: flex;
+}
 .mainDiv{
+  display: inline-block;
   background-color: green;
   height: 500px;
-  margin-top: 50px;
-  margin-left: 200px;
   width: 1000px;
+  margin-top: 30px;
+  margin-left: 100px;
+  border-radius: 20px;
 }
