--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,4 +1,6 @@
 .navbar{
+  position: fixed;
+  top: 0;
   background-color: yellow;
   border-radius: 15px;
   width: 1000px;
@@ -35,41 +37,4 @@ button:hover{
   background-color: brown;
   color: black;
 }
-.sideNavBar{
-  /* position: fixed; */
-  margin-top: 30px;
-  background-color: gray;
-  width: 100px;
-  height: 500px;
-  border-radius: 25px;
-  display: inline-block;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.sideNavBar div{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-.sideNavBar div:hover{
-  box-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
-}
-
-img{
-cursor: pointer;
-}
-#mainSidebar{
-  display: flex;
-}
-.mainDiv{
-  display: inline-block;
-  background-color: green;
-  height: 500px;
-  width: 1000px;
-  margin-top: 30px;
-  margin-left: 100px;
-  border-radius: 20px;
-}
+.
