--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,6 +32,7 @@
   flex-direction: row;
   align-items: center;
   /* justify-content: space-around; */
+  position: relative;
 
 }
 .profile-info img{
@@ -41,8 +42,44 @@
 }
 .profile-info p{
   margin-left: 10px;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bolder;
+  width: 150px;
+}
+.profile-info div{
+  background-color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 70px;
+  border-radius: 10px;
+  position: absolute;
+  right: 5px;
+  bottom: -1px;
+}
+.form{
+  margin-top: 20px;
+  position: relative;
+}
+.form input{
+  display: block;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 15px;
+  border-style: solid;
+  margin-left: 10px;
+}
+.form input::placeholder{
+  font-size: 10px;
+  color: black;
 }
 
+.form button{
+  position: absolute;
+  right: 20px;
+  top: 0;
+  background-color: white;
+  color: black;
+  font-size: 14px;
+  padding: 20px 2px;
 
+}
