--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,7 +13,7 @@
   position: relative;
 }
 .gridboxes{
-  background-color: gray;
+  background-color: rgb(196, 193, 193);
   height: 450px;
   /* width: 100%; */
   padding-top: 0;
