--- a/CSS/sidebar.css
+++ b/CSS/sidebar.css
@@ -2,7 +2,7 @@
   position: fixed; 
   bottom: 0;
   top: 120px;
-  background-color: gray;
+  background-color: rgb(196, 193, 193);
   width: 100px;
   border-radius: 25px;
   display: inline-block;
@@ -18,7 +18,7 @@
 
 }
 .sideNavBar div:hover{
-  box-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
 }
 
 img{
